<resources>
    <string name="app_name">QuanLyBug</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maDA">Mã dự án <font color="red">*</font></string>
    <string name="tenDA">Tên dự án <font color="red">*</font></string>
    <string name="tenQL">Tên quản lý <font color="red">*</font></string>
    <string name="ngayBatDau">Ngày bắt đầu <font color="red">*</font></string>
    <string name="moTa">Mô tả <font color="red">*</font></string>
    <string name="tenLoi">Tên lỗi <font color="red">*</font></string>
    <string name="mucDoNghiemTrong">Mức độ nghiêm trọng <font color="red">*</font></string>
    <string name="Deadline">Deadline <font color="red">*</font></string>
    <string name="ketQuaMongMuon">Kết quả mong muốn<font color="red">*</font></string>
    <string name="soBuoc">Số bước <font color="red">*</font></string>
    <string name="hoVaTen">Họ và tên <font color="red">*</font></string>
    <string name="soDienThoai">Số điện thoại <font color="red">*</font></string>
    <string name="gmail">Gmail <font color="red">*</font></string>
    <string name="matKhau">Mật khẩu <font color="red">*</font></string>
    <string name="chucVu">Chức vụ <font color="red">*</font></string>

</resources>