<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imgBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_margin="32dp"/>

    <ScrollView
        android:layout_below="@id/imgBackProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_centerInParent="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                android:hint="@string/hoVaTen"
                android:layout_marginBottom="12dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtHoTen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chức vụ: "
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical"
                    />
                <Spinner
                    android:id="@+id/spinnerChucVu"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="Chức vụ"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:background="@drawable/custom_edit_text_rounded"
                    />
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                android:hint="@string/soDienThoai"
                android:layout_marginBottom="12dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSDT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                android:hint="@string/gmail"
                android:layout_marginBottom="12dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtGmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                android:hint="@string/matKhau"
                android:layout_marginBottom="12dp"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtMatKhau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnCreateAccount"
                android:layout_width="141dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="32dp"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Tạo tài khoản"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>