<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/imgBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_margin="32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Thêm mới bug"
        android:layout_margin="32dp"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_below="@id/imgBackProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_centerInParent="true"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    android:hint="@string/tenLoi"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtTenLoi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    android:hint="@string/mucDoNghiemTrong"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMucDoNghiemTrong"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/imgMoAnh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/imgAnhBug"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="12dp">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Người theo dõi: "
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/spinnerQLAdd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="12dp">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Dev fix: "
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    />
                <Spinner
                    android:layout_weight="4"
                    android:id="@+id/spinnerDev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom ="20dp"
                android:weightSum="3">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    android:hint="@string/Deadline"
                    android:enabled="false"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtDeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:id="@+id/imgShowCalender"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_calendar"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    android:hint="@string/ketQuaMongMuon"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtKetQuaMongMuon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    android:hint="@string/moTa"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMoTaLoi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text"
                        app:errorEnabled="true"
                        android:hint="@string/soBuoc"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtSoBuoc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_weight="1"
                        android:id="@+id/btnOK"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="OK"

                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/linearCacBuoc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnAddBug"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thêm"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>