<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/imgBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_margin="32dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sửa thông tin bug"
        android:layout_margin="32dp"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <ScrollView
        android:id="@+id/scrollview"
        android:layout_below="@id/imgBackProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_centerInParent="true"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nhập tên lỗi"
                app:endIconMode="clear_text"
                android:layout_marginBottom="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtTenLoi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mucDoNghiemTrong"
                app:endIconMode="clear_text"
                android:layout_marginBottom="20dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtMucDoNghiemTrong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="12dp">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Người theo dõi: "
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/spinnerQL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:padding="12dp">
                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Dev fix: "

                    android:textColor="@color/black"/>
                <Spinner
                    android:layout_weight="3"
                    android:id="@+id/spinnerDev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/Deadline"
                        app:endIconMode="clear_text"
                        android:layout_marginBottom="20dp"
                        >
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtDeadline"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/imgShowCalender"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ketQuaMongMuon"
                    app:endIconMode="clear_text"
                    android:layout_marginBottom="20dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edtKetQuaMongMuon"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/moTa"
                    app:endIconMode="clear_text"
                    android:layout_marginBottom="20dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMoTaLoi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/radioGroup"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:weightSum="6">
                <TextView
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Trạng thái: "
                    android:textColor="@color/black"/>
                <Spinner
                    android:id="@+id/spinnerTrangThai"
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:hint="Số bước"
                    app:endIconMode="clear_text"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_vertical"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtSoBuoc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_weight="1"
                    android:id="@+id/btnOK"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="OK"
                    android:padding="12dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    />
                </LinearLayout>
            <LinearLayout
                android:id="@+id/linearCacBuoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp"/>
            <androidx.cardview.widget.CardView
                android:id="@+id/btnSuaBug"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sửa"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>